# F1tenth-Race

F1tenth-Race/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
F1tenth-Race/config/: spielberg_fast.yaml  spielberg_fast_plus_1.yaml  spielberg_max_stable.yaml
F1tenth-Race/config/param_study/: g01_baseline_fast.yaml  g02_conservative_speed.yaml  g03_aggressive_speed.yaml  g04_high_clearance.yaml  g05_low_clearance.yaml  g06_long_horizon.yaml  g07_short_horizon.yaml  g08_smoother_steering.yaml  g09_sharper_steering.yaml  g10_ml_disabled.yaml
F1tenth-Race/models/: spielberg_ml_model.json
F1tenth-Race/race_planner/: race_planner_node.py
F1tenth-Race/results/: generate_parameter_study_chart.py  parameter_study_lap_time_chart_caption.txt  parameter_study_paper_summary.md  parameter_study_report.docx  parameter_study_results.csv  parameter_study_results.json
F1tenth-Race/scripts/: jsonl_to_csv.py  race_planner_node.py  train_ml_tuner.py
